# model-genai-control-tower

./: .env.example  .gitignore  CONTROL_TOWER_TECHNICAL_WALKTHROUGH.txt  Control Tower Technical Deep Dive Ricky Ansari.docx  Control_Tower_Executive_Briefing.docx  Control_Tower_Technical_Deep_Dive.docx  Control_Tower_Technical_Walkthrough.docx  INTERVIEW_REFERENCE_GUIDE.txt  Makefile  generate_exec_doc.py  generate_technical_deep_dive.py  ~$ntrol_Tower_Executive_Briefing.docx
.cursor/rules/: project-guide.mdc
.github/workflows/: ci.yml  eval.yml  security-sast.yml  security-scan.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_row_level_security.py
backend/app/: __init__.py  auth.py  config.py  database.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: approvals.py  certifications.py  dashboard.py  evaluations.py  evidence.py  findings.py  model_demos.py  models.py  monitoring.py  tools.py  use_cases.py  vendors.py
backend/app/integrations/: __init__.py  base.py  clusterseven.py  ldap_ad.py  salesforce.py  servicenow.py
backend/app/models/: __init__.py  approval.py  base.py  dataset.py  evaluation.py  evidence.py  finding.py  genai_use_case.py  issue.py  model.py  monitoring.py  tool.py  vendor.py
backend/app/schemas/: __init__.py  approval.py  common.py  evaluation.py  evidence.py  finding.py  genai_use_case.py  model.py  tool.py  vendor.py
backend/app/security/: __init__.py  feature_flags.py  vault.py
backend/app/services/: __init__.py  aibom.py  audit_events.py  compliance_mapping.py  evidence.py  guardrails.py  model_card.py  model_registry.py  policy.py  recordkeeping.py  risk_rating.py  storage.py
backend/app/utils/: hashing.py  logging.py  otel.py  pdf_generator.py  pii_redaction.py
backend/app/workers/: __init__.py  eval_worker.py  monitoring_worker.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_evidence.py  test_guardrails.py  test_risk_rating.py
backend/tests/e2e/: playwright_e2e.spec.ts
backend/tests/integration/: __init__.py  test_certification_pipeline.py
backend/tests/load/: k6_api_load.js
deploy/helm/control-tower/: Chart.yaml  values.yaml
deploy/helm/control-tower/templates/: _helpers.tpl  backend-deployment.yaml
deploy/terraform/: main.tf  outputs.tf  variables.tf
deploy/terraform/environments/: dev.tfvars  prod.tfvars
eval/garak/presets/: ct_full_scan.yaml
eval/promptfoo/: promptfooconfig.yaml
eval/promptfoo/prompts/: assistant_qa.txt  debrief_summarizer.txt
eval/promptfoo/redteam/: redteam_config.yaml
eval/pyrit/scenarios/: financial_advisor_injection.py
eval/sample-data/: golden_test_prompts.jsonl  meeting_transcripts.jsonl
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/certifications/: page.tsx
frontend/src/app/compliance/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/demo/: page.tsx
frontend/src/app/evaluations/: page.tsx
frontend/src/app/findings/: page.tsx
frontend/src/app/models/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/tools/: page.tsx
frontend/src/app/use-cases/: page.tsx
frontend/src/components/layout/: sidebar.tsx
frontend/src/hooks/: use-api.ts
frontend/src/lib/: api.ts  types.ts  utils.ts
infra/: docker-compose.yml
infra/grafana/dashboards/: control-tower.json
infra/keycloak/: realm-export.json
infra/otel/: otel-collector-config.yaml
infra/prometheus/: prometheus.yml
infra/temporal-config/: development.yaml
ops/alerting/: pagerduty_rules.yaml
ops/compliance/: sec_17a4_retention_schedule.yaml  vendor_risk_playbook.yaml
ops/runbooks/: api_high_latency.yaml  disaster_recovery.yaml  evidence_integrity_failure.yaml
ops/slos/: performance_cost_baseline.yaml  slo_definitions.yaml  sox_soc2_controls.yaml
policies/opa/: agent_controls.rego  approval_gates.rego  data_classification.rego  separation_of_duties.rego  tool_permissions.rego
scripts/: generate_aibom.py  generate_cert_pack.py  seed_data.py
security/threat_model/: genai_agent_threat_model.yaml
security/tls/: istio_mtls.yaml
security/waf/: waf_rules.yaml
workflows/temporal/: worker.py
workflows/temporal/activities/: evaluation.py  evidence.py  notification.py
workflows/temporal/workflows/: certification.py
